actor create form

--- a/bsff/templates/pages/about.html
+++ b/bsff/templates/pages/about.html
@@ -1,1 +1,23 @@
 {% extends "base.html" %}
+
+{%block content%}
+<p>Every life has a story. Is a story.
+
+And some are smaller.
+
+Some stories are of individual lives, personal tragedies and triumphs. Of people, just trying to get by. Trying to create identity, or understanding, or peace, or family in the chaos of the universe.
+
+Trying to create breathing space.
+
+But the Sol system has a lot of space.
+
+These are stories of the individuals that live in that system, and the frontiers they explore to find their space.</p>
+
+<hr>
+
+<p>Breathing Space, Fading Frontier is an anthology Science Fiction audio drama, telling stories written by a variety of authors in a shared, and collaboratively built universe.
+
+Click here for more information about the cast and crew.
+
+Episodes air on the first and third Friday of the month.</p>
+{%endblock content%}
