--- a/bsff/templates/pages/home.html
+++ b/bsff/templates/pages/home.html
@@ -1,1 +1,13 @@
 {% extends "base.html" %}
+
+{%block content%}
+<h1>Breathing Space, Fading Frontiers</h1>
+
+<h2>There is a great deal of space in the Sol system.
+    These are small stories of the people who fill it.</h2>
+
+<p>Listen to fragments of the lives of people belonging to three vastly different cultures-- Terrans-- planet-dwellers
+    fighting to maintain the lives they’ve always known in an increasingly-precarious ecosystem, Belters--fiercely
+    independent individualists, scraping out livelihoods on the asteroids and moons of the Sol system, and the
+    Peregrination-- former refugees turned family, struggling simply to exist in the blackness of space.</p>
+{%endblock content%}
