--- a/bsff/templates/actors/actor_form.html
+++ b/bsff/templates/actors/actor_form.html
@@ -1,13 +1,16 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
-{%block title%} Add Actor {%endblock title%}
+{% block title %}{{ view.action|default:"Add" }} Actor{% endblock title %}
 
 {%block content%}
 <h1>Add Actor</h1>
+{% with action=view.action|default:"Add" %}
+<h1>{{ action }} Actor</h1>
 <form method="post" action=".">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <button type="submit" class="btn btn-primary">Save</button>
+{% csrf_token %}
+{{ form|crispy }}
+<button type="submit" class="btn btn-primary">{{ action }}</button>
 </form>
+{% endwith %}
 {% endblock content %}
