--- a/bsff/templates/actors/actor_list.html
+++ b/bsff/templates/actors/actor_list.html
@@ -15,4 +15,13 @@
     </li>
     {% endfor %}
 </ul>
+
+<hr/>
+<p>Don't see a Actor listed here?</p>
+<p>
+<a class="btn btn-primary"
+href="{% url 'actors:add' %}" role="button">
+Add Actor
+</a>
+</p>
 {% endblock content %}
